# customer_success_ai

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
mocks/base_conhecimento/: COM-001_renovacao-cancelamento-contratos.md  COM-002_onboarding-demonstracao-produto.md  FIN-001_erros-emissao-boletos-notas-fiscais.md  FIN-002_cobrancas-duplicadas-reembolsos-conciliacao.md  TEC-001_erros-autenticacao-acesso-painel.md  TEC-002_lentidao-timeout-relatorios.md  TKT-9BDCC89A.md
mocks/crm/: crm_mock.json
mocks/tickets/: tickets_historico_mock.json
src/app_mock/: main.py
src/customer_success_ai/: cli.py  config.py  observability.py
src/customer_success_ai/agents/: kb_doc_agent.py  kb_doc_tools.py  kb_generator.py  specialists.py
src/customer_success_ai/integrations/: __init__.py  crm_api.py  http_backend.py  kb_api.py  loader.py  tickets_api.py  tickets_mock_spawn.py
src/customer_success_ai/mcp_backend/: __init__.py  client.py  server.py  spawn.py
src/customer_success_ai/memory/: __init__.py  feedback.py
src/customer_success_ai/mocks/: loader.py  tickets_api.py  tickets_mock_spawn.py
src/customer_success_ai/rag/: models.py  retriever.py
src/customer_success_ai/storage/: __init__.py  base.py  sqlite.py
src/customer_success_ai/triage/: models.py  router.py  ticket_input.py
src/customer_success_ai/workflow/: graph.py  state.py
