[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-success-ai"
version = "0.1.0"
description = "Sistema agentico (MVP) para Customer Success"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
customer-success-ai = "customer_success_ai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
